# Particles

./: CMakeLists.txt  CmakeLists.txt  doc.md  helw.cpp  particle_phsx.hpp  sim_2d.cpp  textos  textos.txt
linux/: CMakeLists.txt  README.md  run.sh
linux/src/: benchmark.hpp  particle_phsx.hpp  sim_2d.cpp
physics/: Particle_phsks3d.hpp  Utility.hpp  particle_phsx.hpp
src/: main.cpp  sim_2d.cpp
src/math/: vec3.hpp
src/physics/: particle.hpp  particle_system.cpp  particle_system.hpp
src/render/: renderer.cpp  renderer.hpp
src/spatial/: spacial_grid.hpp
src/utils/: benchmark.hpp  mouse.hpp  thread_pool.hpp
things/GLtest/: CMakeLists.txt  main.cpp
things/lateruse/: Particle_phsks3d.hpp  helw.cpp
vscode/: settings.json
windows/: textos.md
windows/src/: particle_phsx.hpp
windows/things/GLtest/shaders/: fragment_shader.glsl
windows/things/lateruse/: Utility.hpp
windows/vscode/: settings.json
